Extracted Hardcoded strings

--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -37,7 +37,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingStart="16dp"
-            android:text="Please enter your email address."
+            android:text="@string/forgot_password_header"
             android:textColor="@color/text_darker"
             android:textSize="32dp"
             android:textStyle="bold" />
@@ -53,7 +53,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingStart="16dp"
-            android:text="An email will be sent to entered address with reset instructions"
+            android:text="@string/forgot_password_subheader"
             android:textColor="@color/text_dark"
             android:textSize="20sp" />
 
