--- a/MyHome/app/src/main/res/layout/filter_child.xml
+++ b/MyHome/app/src/main/res/layout/filter_child.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:orientation="vertical">
@@ -13,5 +14,6 @@
         android:gravity="center_vertical"
         android:lines="1"
         android:text="Sample"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
