--- a/MyHome/app/src/main/res/layout/appointment_item.xml
+++ b/MyHome/app/src/main/res/layout/appointment_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/appointment_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,7 +8,8 @@
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:minHeight="48dp">
+    android:minHeight="48dp"
+    tools:ignore="HardcodedText">
 
     <TextView
         android:id="@+id/date"
@@ -61,8 +63,8 @@
         android:layout_width="24dp"
         android:layout_height="30dp"
         android:layout_alignBottom="@id/doctor_name"
-        android:layout_alignRight="@id/time"
         android:layout_alignLeft="@id/time"
+        android:layout_alignRight="@id/time"
         android:layout_marginEnd="12dp"
         android:layout_marginLeft="10dp"
         android:src="@mipmap/map_blue"
