--- a/MyHome/app/src/main/res/layout/book_select_reason.xml
+++ b/MyHome/app/src/main/res/layout/book_select_reason.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/calendar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +15,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Date Stuff Here..."
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        tools:ignore="HardcodedText" />
 
     <com.dignityhealth.myhome.views.FlowLayout
         android:id="@+id/time_group"
@@ -55,7 +57,7 @@
         android:layout_height="100dp"
         android:background="@drawable/edit_text_boarder_grey"
         android:gravity="left"
-        android:hint="Please tell us the purpose of your visit." />
+        android:hint="@string/booking_reason_hint" />
 
     <Button
         android:id="@+id/book_submit"
@@ -63,6 +65,6 @@
         android:layout_width="255dp"
         android:layout_height="45dp"
         android:layout_marginTop="18dp"
-        android:text="Next" />
+        android:text="@string/next" />
 
 </LinearLayout>
