--- a/MyHome/app/src/main/res/layout/fragment_login.xml
+++ b/MyHome/app/src/main/res/layout/fragment_login.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -47,7 +48,8 @@
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp" />
+                android:paddingRight="10dp"
+                tools:ignore="HardcodedText" />
 
 
             <android.support.design.widget.TextInputEditText
@@ -66,7 +68,8 @@
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp" />
+                android:paddingRight="10dp"
+                tools:ignore="HardcodedText" />
 
             <Button
                 android:id="@+id/log_in_button"
