--- a/MyHome/app/src/main/res/layout/fragment_password_criteria.xml
+++ b/MyHome/app/src/main/res/layout/fragment_password_criteria.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:gravity="center_horizontal"
-            android:text="Password Criteria" />
+            android:text="@string/password_criteria" />
 
         <TextView
             android:id="@+id/password_criteria_text"
@@ -30,6 +30,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:text="Ok" />
+            android:text="@string/ok" />
     </RelativeLayout>
 </layout>
