--- a/MyHome/app/src/main/res/layout/profile_view.xml
+++ b/MyHome/app/src/main/res/layout/profile_view.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -27,7 +28,8 @@
                 android:maxLines="1"
                 android:text="Kevin Welsh"
                 android:textSize="@dimen/profile_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/preferred_name"
@@ -38,7 +40,8 @@
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="Kev"
                 android:textSize="@dimen/profile_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/gender"
@@ -47,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/preferred_name"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
-                android:text="Male"
+                android:text="@string/male"
                 android:textSize="@dimen/profile_text_size"
                 android:textStyle="bold" />
 
@@ -60,7 +63,8 @@
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="1/12/1987"
                 android:textSize="@dimen/profile_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/address"
@@ -73,7 +77,8 @@
                 android:maxLines="3"
                 android:text="540 Trinity Lane North\nSt.Petersburg, FL 33716"
                 android:textSize="@dimen/profile_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/phone"
@@ -84,7 +89,8 @@
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="867-5309"
                 android:textSize="@dimen/profile_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/email"
@@ -96,7 +102,8 @@
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="kwelsh@prokarma.com"
                 android:textSize="@dimen/profile_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/provider_label"
@@ -105,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/email"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
-                android:text="Insurance Provider" />
+                android:text="@string/insurance_provider" />
 
             <TextView
                 android:id="@+id/provider"
@@ -115,7 +122,8 @@
                 android:layout_below="@id/provider_label"
                 android:text="Dignity Health"
                 android:textSize="@dimen/profile_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/id_label"
@@ -124,7 +132,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/provider"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
-                android:text="Member ID" />
+                android:text="@string/member_id" />
 
             <TextView
                 android:id="@+id/id"
@@ -134,7 +142,8 @@
                 android:layout_below="@id/id_label"
                 android:text="800-588-2300"
                 android:textSize="@dimen/profile_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/group_label"
@@ -143,7 +152,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/id"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
-                android:text="Group" />
+                android:text="@string/group" />
 
             <TextView
                 android:id="@+id/group"
@@ -153,7 +162,8 @@
                 android:layout_below="@id/group_label"
                 android:text="230-2333"
                 android:textSize="@dimen/profile_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
             <Button
                 android:id="@+id/sign_out"
@@ -185,6 +195,6 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:layout_centerInParent="true"
-        android:text="Profile Unavailable"
+        android:text="@string/profile_unavailable"
         android:textSize="@dimen/profile_text_size" />
 </RelativeLayout>
