--- a/MyHome/app/src/main/res/layout/provider_details_profile.xml
+++ b/MyHome/app/src/main/res/layout/provider_details_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -24,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="200dp"
-            android:text="Accepting New Patients"
+            android:text="@string/accepting_new_patients"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -34,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/label_accepting_new_patients"
-            android:text="Yes"
+            android:text="@string/yes"
             android:textSize="18sp" />
 
         <TextView
@@ -43,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="Languages"
+            android:text="@string/languages"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -56,7 +57,8 @@
             android:layout_below="@id/label_languages"
             android:minHeight="70dp"
             android:text="English"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/label_gender"
@@ -66,7 +68,7 @@
             android:layout_below="@id/accepting_new_patients"
             android:layout_marginTop="24dp"
             android:maxWidth="200dp"
-            android:text="Gender"
+            android:text="@string/gender"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -76,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/label_gender"
-            android:text="Male"
+            android:text="@string/male"
             android:textSize="18sp" />
 
         <TextView
@@ -86,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@id/languages"
-            android:text="Experience"
+            android:text="@string/experience"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -98,7 +100,8 @@
             android:layout_alignLeft="@id/label_experience"
             android:layout_below="@id/label_experience"
             android:text="30 Years"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/label_philosophy"
@@ -107,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/gender"
             android:layout_marginTop="24dp"
-            android:text="Care Philosophy"
+            android:text="@string/care_philosophy"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -118,7 +121,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/label_philosophy"
             android:text="Specialities Request: Pediatric\nGastroenterology"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/label_locations"
@@ -126,7 +130,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/philosophy"
-            android:text="Locations"
+            android:text="@string/locations"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -137,7 +141,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/label_locations"
             android:text="90 Madison St\nSte 504\nDenver, CO 80206"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            tools:ignore="HardcodedText" />
 
     </RelativeLayout>
 </LinearLayout>
