--- a/MyHome/app/src/main/res/layout/settings.xml
+++ b/MyHome/app/src/main/res/layout/settings.xml
@@ -8,6 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Settings" />
+        android:text="@string/settings" />
 
 </LinearLayout>
