--- a/MyHome/app/src/main/res/layout/tos.xml
+++ b/MyHome/app/src/main/res/layout/tos.xml
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:padding="16dp"
             android:paddingLeft="32dp"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textColor="@color/white" />
 
         <TextView
@@ -39,7 +39,7 @@
             android:gravity="center_vertical"
             android:padding="16dp"
             android:paddingLeft="32dp"
-            android:text="Accept"
+            android:text="@string/accept"
             android:textColor="@color/white" />
     </RelativeLayout>
 
