--- a/MyHome/app/src/main/res/menu/profile_edit_menu.xml
+++ b/MyHome/app/src/main/res/menu/profile_edit_menu.xml
@@ -4,6 +4,6 @@
 
     <item
         android:id="@+id/save_profile"
-        android:title="Save"
+        android:title="@string/save"
         app:showAsAction="always" />
 </menu>
