--- a/MyHome/app/src/main/res/menu/profile_view_menu.xml
+++ b/MyHome/app/src/main/res/menu/profile_view_menu.xml
@@ -4,6 +4,6 @@
 
     <item
         android:id="@+id/edit_profile"
-        android:title="Edit"
+        android:title="@string/edit"
         app:showAsAction="always" />
 </menu>
