--- a/MyHome/app/src/main/res/layout/adapter_suggestion_list_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_suggestion_list_item.xml
@@ -23,10 +23,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:drawableRight="@mipmap/search"
-            android:textColor="@color/md_blue_grey_680"
             android:ellipsize="end"
-            android:lines="1" />
+            android:lines="1"
+            android:textColor="@color/md_blue_grey_680" />
+
+        <ImageView
+            android:layout_width="12dp"
+            android:layout_height="24dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_carrot_blue" />
 
         <View
             android:layout_width="match_parent"
