--- a/MyHome/app/src/main/res/layout/fragment_map_view.xml
+++ b/MyHome/app/src/main/res/layout/fragment_map_view.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <fragment
-        android:id="@+id/providers_map"
+        android:id="@+id/providersMap"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
