Added headers to the profile details stats

--- a/MyHome/app/src/main/res/layout/provider_details_education_item.xml
+++ b/MyHome/app/src/main/res/layout/provider_details_education_item.xml
@@ -10,7 +10,8 @@
         style="@style/tradeGothicLTStdLight_14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:textSize="18sp" />
 
 </LinearLayout>
