--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -49,7 +49,7 @@
 
         <Button
             android:id="@+id/book_appointment"
-            style="@style/enableButtonStyle"
+            style="@style/primaryButtonStyle"
             android:layout_width="255dp"
             android:layout_height="45dp"
             android:layout_alignLeft="@id/doctor_name"
