--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -38,6 +38,14 @@
         <item name="android:layout_height">44dp</item>
     </style>
 
+    <style name="primaryButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_primary</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_height">44dp</item>
+    </style>
+
     <style name="selectableButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/selectable_button</item>
         <item name="android:textColor">@drawable/selectable_button_text</item>
